tests/errors/unsatisfied-requirement.fil
import "primitives/core.fil";

comp Main<G: 3>(
  @interface[G] go_G: 1,
  @[G, G+1] left: 32,
  @[G, G+2] right: 32
) -> (
  @[G+3, G+4] out: 32
) {
  M := new MultComb[32];
  m0 := M<G+1>(left, right);
  out = m0.out;
}
